--- a/NPGeek.Web/NPGeek.Web.csproj
+++ b/NPGeek.Web/NPGeek.Web.csproj
@@ -132,6 +132,8 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ParkController.cs" />
+    <Compile Include="DAL\IParkDAL.cs" />
     <Compile Include="DAL\WeatherDAL.cs" />
     <Compile Include="DAL\SurveyDAL.cs" />
     <Compile Include="DAL\ParkDAL.cs" />
@@ -148,6 +150,7 @@
     <None Include="packages.config" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\_LayoutPage.cshtml" />
+    <Content Include="Views\Park\Detail.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
