--- a/NPGeek.Web/Web.config
+++ b/NPGeek.Web/Web.config
@@ -11,7 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=NPGeek; Trusted_Connection = true;" />
+    <add name="DatabaseConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=NPGeek; Trusted_Connection = true;" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
